2007-07-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el: Relicense to GPLv3 or later.
	(vc-directory-exclusion-list, vc-handled-backends): Remove.
	
	* vc-hooks.el (vc-handled-backends): Add GIT.

	* vc.el (vc-directory-exclusion-list): Add .git.

2007-07-26  Alexandre Julliard  <julliard@winehq.org>

	* vc-git.el (vc-git-revision-table)
	(vc-git-revision-completion-table): New functions.

2007-07-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* progmodes/ebnf-abn.el (ebnf-abn-skip-comment):
	* progmodes/ebnf-bnf.el (ebnf-bnf-skip-comment):
	* progmodes/ebnf-dtd.el (ebnf-dtd-skip-comment):
	* progmodes/ebnf-ebx.el (ebnf-ebx-skip-comment):
	* progmodes/ebnf-iso.el (ebnf-iso-skip-comment):
	* progmodes/ebnf-yac.el (ebnf-yac-skip-comment): New version.
	New command actions for EPS header and EPS footer.

	* progmodes/ebnf2ps.el: New command actions for EPS header and EPS
	footer.  Fix some problems with one-or-more, zero-or-more and
	alternative constructions generation.  Some log messages
	implementation.  Doc fix.
	(ebnf-version): New version 4.4.
	(ebnf-eps-header-font, ebnf-eps-header, ebnf-eps-footer-font)
	(ebnf-eps-footer, ebnf-log): New options.
	(ebnf-find-style, ebnf-eps-header-footer, ebnf-eps-header)
	(ebnf-eps-footer, ebnf-eps-string, ebnf-eps-header-footer-comment)
	(ebnf-eps-header-footer-p, ebnf-eps-header-comment)
	(ebnf-eps-footer-comment, ebnf-eps-header-footer-file)
	(ebnf-eps-header-footer-set, ebnf-log-header, ebnf-log): New funs.
	(ebnf-style-custom-list, ebnf-style-database): Put new values.
	(ebnf-print-directory, ebnf-print-file, ebnf-print-buffer)
	(ebnf-print-region, ebnf-spool-directory, ebnf-spool-file)
	(ebnf-spool-buffer, ebnf-spool-region, ebnf-eps-directory)
	(ebnf-eps-file, ebnf-eps-buffer, ebnf-eps-region)
	(ebnf-syntax-directory, ebnf-syntax-file, ebnf-syntax-buffer)
	(ebnf-syntax-region, ebnf-parse-and-sort, ebnf-begin-job)
	(ebnf-dimensions, ebnf-production-dimension, ebnf-terminal-dimension)